@@ -1,3 +1,11 @@
+2006-03-31  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/common.h src/src_*.c src/samplerate.c
+    Add slots for vari_process and const_process functions.
+
+    * tests/varispeed_test.c tests/Makefile.am
+    Add new test and hook into build.
+
 2005-12-29  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * examples/sndfile-resample.c
